--- a/metadata.yaml
+++ b/metadata.yaml
@@ -12,8 +12,8 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-homepage: "https://www.example.com"
-documentation: "https://www.example.com/documentation"
+homepage: "https://usesuperflow.com/"
+documentation: "https://usesuperflow.com/"
 versions:
-  - sha: 5f02a788b90ae804f86b04aa24af8937e567874a
-    changeNotes: Initial Version
+  - sha: 808bda78dac2c6dbca72947209fb7836fdab03a2
+    changeNotes: Updated name, description and icon in template.tpl file.
